fixed top nav bar to top and added some padding-right to right aligned items on the bar

--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -21,6 +21,9 @@
 .margin-bottom-10 {
     margin-bottom: 10px;
 }
+.pr15 {
+    padding-right: 15px;
+}
 .profile-img {
     height: 180px;
 }
